# Chords-LSL-Connector

./: .gitignore  README.md  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  version.json
.github/workflows/: build.yml
.next/: trace
.next/cache/: .rscinfo
.next/cache/webpack/client-development/: index.pack.gz.old
.next/server/: server-reference-manifest.json
.next/static/chunks/fallback/: amp.js  react-refresh.js  webpack.js
src-tauri/: Cargo.toml  Entitlemants.plist  Info.plist  info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: BLUETOOTH.rs  main.rs
src/app/: OSicons.tsx  backup.tsx  globals.css  main.tsx  page.tsx  samplingchart.tsx  sds.txt  titlebar.tsx
src/app/ui/: Button.tsx
