[package]
name = "app"
version = "0.1.0"
description = "Chords LSL Connector"
authors = ["Amaan Maheshwari"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.2", features = [] }

[dependencies]
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.1.1", features = [] }
tauri-plugin-log = "2.0.0-rc"
serialport = { git = "https://github.com/LukaOber/serialport-rs" }
lsl = { git = "https://github.com/labstreaminglayer/liblsl-rust", version = "0.1.1" }
lazy_static = "1.4"
